# OptionsTrader

./: .gitignore  CLAUDE.md  Options_Trading_System.md  brainstorm.md  pyproject.toml  test_server.py  test_yahoo.py
api/: __init__.py  cache.py  main.py
config/: mcp_servers.yaml  providers.yaml
data/: paper_accounts.json
docs/: WORKFLOW.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlertsManager.tsx  IndexTicker.tsx  OptionsChain.tsx  OptionsScanner.tsx  PaperTrading.tsx  PayoffDiagram.tsx  PositionTracker.tsx  PriceChart.tsx  QuoteLookup.tsx  Settings.tsx  TradeJournal.tsx  VolatilitySurface.tsx  VolatilitySurface3D.tsx  Watchlist.tsx
frontend/src/hooks/: useEngine.ts  useMarketData.ts
frontend/src/lib/: api.ts  engineApi.ts  utils.ts
mcp_server/: __init__.py  engine_models.py  models.py  server.py
mcp_server/prompts/: __init__.py
mcp_server/providers/: __init__.py  base.py  ibkr.py  mock.py  saxo.py  yahoo.py
mcp_server/resources/: __init__.py
mcp_server/services/: __init__.py  alerts.py  journal.py  jpm_research.py  paper_trading.py  payoff.py  positions.py  scanner.py  storage.py
mcp_server/services/engine/: __init__.py  adjustments.py  conflicts.py  engine.py  exits.py  market_inputs.py  playbooks.py  reference_tables.py  regime.py  selector.py  sizing.py  strategies.py  tail_risk.py
mcp_server/tools/: __init__.py
tests/: __init__.py  conftest.py  test_api_batch.py  test_cache.py  test_mock_provider.py
(+49 files in other folders)
